--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,16 @@
     <title>Plankan</title>
 </head>
 <body>
+    <div id="content">
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="program.html">Program</a>
+            <a href="personal.html">Personal</a>
+            <a href="kontakt.html">Kontakta oss</a>
+        </div>
+        <div id="under-menu">
 
-
+        </div>
+    </div>
 </body>
 </html>
