la in items som affärerna skulle kunna vara i

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,12 @@
             <a href="kontakt.html">Kontakta oss</a>
         </div>
         <div id="under-menu">
-
+            <div id="under-menu-top"></div>
+            <div id="item"></div>
+            <div id="item"></div>
+            <div id="item"></div>
+            <div id="item"></div>
+            <div id="under-menu-bottom"></div>
         </div>
     </div>
 </body>
