la in var bilderna kan vara i items

--- a/site/index.html
+++ b/site/index.html
@@ -15,10 +15,18 @@
         </div>
         <div id="under-menu">
             <div id="under-menu-top"></div>
-            <div id="item"></div>
-            <div id="item"></div>
-            <div id="item"></div>
-            <div id="item"></div>
+            <div id="item">
+                <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+            </div>
+            <div id="item">
+                <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+            </div>
+            <div id="item">
+                <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+            </div>
+            <div id="item">
+                <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+            </div>
             <div id="under-menu-bottom"></div>
         </div>
     </div>
