--- a/site/index.html
+++ b/site/index.html
@@ -17,15 +17,19 @@
             <div id="under-menu-top"></div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
             </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
             </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
             </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
+                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt </p>
             </div>
             <div id="under-menu-bottom"></div>
         </div>
