la in searchbar

--- a/site/index.html
+++ b/site/index.html
@@ -9,9 +9,15 @@
     <div id="content">
         <div id="menu">
             <a href="index.html">Home</a>
-            <a href="program.html">Program</a>
-            <a href="personal.html">Personal</a>
+            <a href="program.html">Bläddra</a>
             <a href="kontakt.html">Kontakta oss</a>
+            <a href="mitt-konto.html">Mitt konto</a>
+            <div id="tfheader">
+                <form id="tfnewsearch" method="get" action="">
+                    <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
+                </form>
+                <div class="tfclear"></div>
+            </div>
         </div>
         <div id="under-menu">
             <div id="under-menu-top"></div>
