--- a/site/sök-sida.html
+++ b/site/sök-sida.html
@@ -8,7 +8,7 @@
 <body>
     <div id="content">
         <div id="menu">
-            <a href="sök-sida.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="program.html">Bläddra</a>
             <a href="kontakt.html">Kontakta oss</a>
             <a href="mitt-konto.html">Mitt konto</a>
