början av my-page

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <div id="content">
     <div id="menu">
         <a href="index.html">Home</a>
-        <a href="program.html">Bläddra</a>
+        <a href="sök-sida.html">Bläddra</a>
         <a href="kontakt.html">Kontakta oss</a>
         <a href="mitt-konto.html">Mitt konto</a>
         <div id="tfheader">
