--- a/site/my-page.html
+++ b/site/my-page.html
@@ -22,6 +22,7 @@
     <div id="under-menu">
         <div id="framsidans-logo1">
             <div id="store-pic"><p style="font-size:40px">bild här</p></div>
+            <p id="store-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nisl at mi lacinia sodales quis sed arcu. Praesent eget tellus odio. Vestibulum in aliquet odio. Quisque id faucibus erat. Phasellus efficitur orci nec finibus ultrices. In at nibh quam. Morbi bibendum massa volutpat enim accumsan aliquam. Etiam sollicitudin sagittis purus, eu efficitur ante euismod a. Nam dictum in nulla non fringilla. Vivamus iaculis, risus vel imperdiet tincidunt, est lectus scelerisque orci, quis viverra est nisi dignissim justo. Donec commodo, odio a porta placerat, ipsum dui gravida augue, vel fermentum augue elit vel mi. Ut semper varius consectetur.</p>
         </div>
         <div id="item">
             <div id="item-pic"><p style="font-size:40px">bild här</p></div>
