--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
         <a href="index.html">Home</a>
         <a href="sök-sida.html">Bläddra</a>
         <a href="kontakt.html">Kontakta oss</a>
-        <a href="mitt-konto.html">Mitt konto</a>
+        <a href="my-page.html">Mitt konto</a>
         <div id="tfheader">
             <form id="tfnewsearch" method="get" action="">
                 <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
@@ -26,6 +26,17 @@
         <p id="white-paragraph">Vivamus accumsan dignissim sem vehicula pellentesque. Donec eget mi eros. Suspendisse quis pellentesque justo. Proin vitae porttitor nulla. Quisque ultricies est quis viverra sodales. Nulla commodo est eget dolor iaculis viverra. Vivamus euismod quam a ligula blandit, ut lacinia diam vestibulum.</p>
         <p id="white-paragraph">Proin ornare varius est vel venenatis. Donec eleifend, justo sed aliquam maximus, purus neque bibendum nibh, et commodo risus felis non nisi. Proin ante urna, pellentesque feugiat mauris cursus, posuere sagittis nisl. Donec vitae cursus ex. Pellentesque rhoncus feugiat interdum. Vivamus aliquet consequat nibh at viverra. Nullam lacus sem, aliquet at condimentum vel, semper at velit. Donec non vestibulum risus. Nullam feugiat pellentesque varius. Ut euismod, mauris sed molestie elementum, turpis nibh molestie purus, at tempus urna mi non ante. Mauris sit amet suscipit ex, nec rhoncus lacus. Morbi sed venenatis ex, blandit sodales ligula.</p>
         <p id="white-paragraph">Pellentesque eu massa et nisl auctor condimentum. Nullam consequat, neque sed sagittis facilisis, justo neque faucibus purus, luctus luctus ex eros vel eros. Vivamus suscipit efficitur quam, eu tincidunt justo tincidunt vitae. Fusce sit amet consectetur justo. Sed a convallis neque. Ut a ultrices ipsum. Phasellus nec lorem id leo viverra venenatis ac in nibh. Praesent vestibulum lorem id nunc iaculis volutpat. Duis id pellentesque mi. In pretium est sed enim egestas porttitor.</p>
+    </div>
+    <div id="footer">
+        <div id="footer-text">
+            <p>All content belongs to swagentertainment© 2015-forever <a href="https://github.com/itgsod-omer-akgun/Plankan">github</a> | Powered by swag</p>
+            <canvas id="myCanvas" width="50px" height="50px"></canvas>
+            <script>
+                ctx.font = "30px Arial";
+                ctx.strokeText("TZT",10,50);
+                ctx.fillstyle="#FFFFFF"
+            </script>
+        </div>
     </div>
 </div>
 </body>
