--- a/site/my-page.html
+++ b/site/my-page.html
@@ -11,7 +11,7 @@
         <a href="index.html">Home</a>
         <a href="sök-sida.html">Bläddra</a>
         <a href="kontakt.html">Kontakta oss</a>
-        <a href="mitt-konto.html">Mitt konto</a>
+        <a href="my-page.html">Mitt konto</a>
         <div id="tfheader">
             <form id="tfnewsearch" method="get" action="">
                 <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
@@ -20,26 +20,38 @@
         </div>
     </div>
     <div id="under-menu">
-        <div id="framsidans-logo1">
+        <div id="store">
             <div id="store-pic"><p style="font-size:40px">bild här</p></div>
             <p id="store-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nisl at mi lacinia sodales quis sed arcu. Praesent eget tellus odio. Vestibulum in aliquet odio. Quisque id faucibus erat. Phasellus efficitur orci nec finibus ultrices. In at nibh quam. Morbi bibendum massa volutpat enim accumsan aliquam. Etiam sollicitudin sagittis purus, eu efficitur ante euismod a. Nam dictum in nulla non fringilla. Vivamus iaculis, risus vel imperdiet tincidunt, est lectus scelerisque orci, quis viverra est nisi dignissim justo. Donec commodo, odio a porta placerat, ipsum dui gravida augue, vel fermentum augue elit vel mi. Ut semper varius consectetur.</p>
         </div>
         <div id="item">
             <div id="item-pic"><p style="font-size:40px">bild här</p></div>
-            <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
+            <h2>1 träfisk</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
         </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
-                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
+                <h2>2 träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
             </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
-                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
+                <h2>3 träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt non cursus sit amet, pellentesque dapibus nulla. Sed venenatis fringilla velit sit amet malesuada. Nam pellentesque vel tortor id venenatis.</p>
             </div>
             <div id="item">
                 <div id="item-pic"><p style="font-size:40px">bild här</p></div>
-                <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt </p>
+                <h2>4 träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt </p>
             </div>
+    </div>
+    <div id="footer">
+        <div id="footer-text">
+            <p>All content belongs to swagentertainment© 2015-forever <a href="https://github.com/itgsod-omer-akgun/Plankan">github</a> | Powered by swag</p>
+
+            <canvas id="myCanvas" width="50px" height="50px"></canvas>
+            <script>
+                ctx.font = "30px Arial";
+                ctx.strokeText("TZT",10,50);
+                ctx.fillstyle="#FFFFFF"
+            </script>
+        </div>
     </div>
 </div>
 </body>
