--- a/site/sök-sida.html
+++ b/site/sök-sida.html
@@ -11,7 +11,7 @@
             <a href="index.html">Home</a>
             <a href="sök-sida.html">Bläddra</a>
             <a href="kontakt.html">Kontakta oss</a>
-            <a href="mitt-konto.html">Mitt konto</a>
+            <a href="my-page.html">Mitt konto</a>
             <div id="tfheader">
                 <form id="tfnewsearch" method="get" action="">
                     <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
@@ -38,6 +38,17 @@
                 <h2>Adams träfiskar</h2><p>Träfiskar gjorda av det finaste materialet i sverige. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis tristique velit, eu maximus nisl aliquet at. Nullam finibus dui quis facilisis hendrerit. Proin lorem ligula, tincidunt </p>
             </div>
             <div id="under-menu-bottom"></div>
+        </div>
+        <div id="footer">
+            <div id="footer-text">
+                <p>All content belongs to swagentertainment© 2015-forever <a href="https://github.com/itgsod-omer-akgun/Plankan">github</a> | Powered by swag</p>
+                <canvas id="myCanvas" width="100px" height="200px"></canvas>
+                <script>
+                    ctx.font = "30px Arial";
+                    ctx.strokeText("SWAGLORDBITCH",10,50);
+                    ctx.fillstyle="#FF0000"
+                </script>
+            </div>
         </div>
     </div>
 </body>
