--- a/site/index.html
+++ b/site/index.html
@@ -6,38 +6,75 @@
     <title>Plankan</title>
 </head>
 <body>
-<div id="content">
-    <div id="menu">
-        <a href="index.html">Home</a>
-        <a href="sök-sida.html">Bläddra</a>
-        <a href="kontakt.html">Kontakta oss</a>
-        <a href="my-page.html">Mitt konto</a>
-        <div id="tfheader">
-            <form id="tfnewsearch" method="get" action="">
-                <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
-            </form>
-            <div class="tfclear"></div>
+    <div id="content">
+        <div id="menu">
+            <a href="index.html">
+                <canvas id="menu-canvas" width="110" height="100"
+                        style="border:0px solid #d3d3d3;">
+                    Your browser does not support the canvas element.
+                </canvas>
+                <script>
+                    var canvas = document.getElementById("menu-canvas");
+                    var ctx = canvas.getContext("2d");
+                    ctx.font = "30px Arial";
+                ctx.fillText("Home",10,50);
+                </script>
+            </a>
+            <a href="sök-sida.html">
+                <canvas id="sök-sida-canvas" width="120" height="100"
+                        style="border:0px solid #d3d3d3;">
+                    Your browser does not support the canvas element.
+                </canvas>
+                <script>
+                    var canvas = document.getElementById("sök-sida-canvas");
+                    var ctx = canvas.getContext("2d");
+                    ctx.font = "30px Arial";
+                    ctx.fillText("Bläddra",10,50);
+                </script>
+            </a>
+            <a href="kontakt.html">
+                <canvas id="kontakt-canvas" width="200" height="100"
+                                           style="border:0px solid #d3d3d3;">
+                Your browser does not support the canvas element.
+            </canvas>
+                <script>
+                    var canvas = document.getElementById("kontakt-canvas");
+                    var ctx = canvas.getContext("2d");
+                    ctx.font = "30px Arial";
+                    ctx.fillText("Kontakta oss",10,50);
+                </script>
+            </a>
+            <a href="my-page.html">
+                <canvas id="my-page-canvas" width="140" height="100"
+                                           style="border:0px solid #d3d3d3;">
+                Your browser does not support the canvas element.
+                </canvas>
+                <script>
+                    var canvas = document.getElementById("my-page-canvas");
+                    var ctx = canvas.getContext("2d");
+                    ctx.font = "30px Arial";
+                    ctx.fillText("mitt konto",10,50);
+                </script></a>
+            <div id="tfheader">
+                <form id="tfnewsearch" method="get" action="">
+                    <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
+                </form>
+                <div class="tfclear"></div>
+            </div>
+        </div>
+        <div id="under-menu">
+            <div id="framsidans-logo1"></div>
+            <p id="white-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nisl at mi lacinia sodales quis sed arcu. Praesent eget tellus odio. Vestibulum in aliquet odio. Quisque id faucibus erat. Phasellus efficitur orci nec finibus ultrices. In at nibh quam. Morbi bibendum massa volutpat enim accumsan aliquam. Etiam sollicitudin sagittis purus, eu efficitur ante euismod a. Nam dictum in nulla non fringilla. Vivamus iaculis, risus vel imperdiet tincidunt, est lectus scelerisque orci, quis viverra est nisi dignissim justo. Donec commodo, odio a porta placerat, ipsum dui gravida augue, vel fermentum augue elit vel mi. Ut semper varius consectetur.</p>
+            <p id="white-paragraph">Praesent at elementum orci, ut fringilla sem. Mauris suscipit dui vel erat ullamcorper bibendum. Fusce hendrerit orci at ante consequat, at cursus nisl accumsan. Pellentesque eu tempor nisl. Nam leo purus, gravida quis elementum at, maximus iaculis libero. Curabitur blandit eleifend quam. Curabitur sollicitudin, turpis in scelerisque maximus, velit elit hendrerit sapien, quis eleifend purus ipsum et quam. Donec ac mi id purus rutrum venenatis. Quisque interdum magna quam, at faucibus dolor iaculis id. Vivamus eget tellus dolor. Sed id libero eget nulla suscipit tempus ac eu risus. Suspendisse sollicitudin finibus dapibus.</p>
+            <p id="white-paragraph">Vivamus accumsan dignissim sem vehicula pellentesque. Donec eget mi eros. Suspendisse quis pellentesque justo. Proin vitae porttitor nulla. Quisque ultricies est quis viverra sodales. Nulla commodo est eget dolor iaculis viverra. Vivamus euismod quam a ligula blandit, ut lacinia diam vestibulum.</p>
+            <p id="white-paragraph">Proin ornare varius est vel venenatis. Donec eleifend, justo sed aliquam maximus, purus neque bibendum nibh, et commodo risus felis non nisi. Proin ante urna, pellentesque feugiat mauris cursus, posuere sagittis nisl. Donec vitae cursus ex. Pellentesque rhoncus feugiat interdum. Vivamus aliquet consequat nibh at viverra. Nullam lacus sem, aliquet at condimentum vel, semper at velit. Donec non vestibulum risus. Nullam feugiat pellentesque varius. Ut euismod, mauris sed molestie elementum, turpis nibh molestie purus, at tempus urna mi non ante. Mauris sit amet suscipit ex, nec rhoncus lacus. Morbi sed venenatis ex, blandit sodales ligula.</p>
+            <p id="white-paragraph">Pellentesque eu massa et nisl auctor condimentum. Nullam consequat, neque sed sagittis facilisis, justo neque faucibus purus, luctus luctus ex eros vel eros. Vivamus suscipit efficitur quam, eu tincidunt justo tincidunt vitae. Fusce sit amet consectetur justo. Sed a convallis neque. Ut a ultrices ipsum. Phasellus nec lorem id leo viverra venenatis ac in nibh. Praesent vestibulum lorem id nunc iaculis volutpat. Duis id pellentesque mi. In pretium est sed enim egestas porttitor.</p>
+        </div>
+        <div id="footer">
+            <div id="footer-text">
+                <p>All content belongs to swagentertainment© 2015-forever <a href="https://github.com/itgsod-omer-akgun/Plankan">github</a> | Powered by swag</p>
+            </div>
         </div>
     </div>
-    <div id="under-menu">
-        <div id="framsidans-logo1"></div>
-        <p id="white-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel nisl at mi lacinia sodales quis sed arcu. Praesent eget tellus odio. Vestibulum in aliquet odio. Quisque id faucibus erat. Phasellus efficitur orci nec finibus ultrices. In at nibh quam. Morbi bibendum massa volutpat enim accumsan aliquam. Etiam sollicitudin sagittis purus, eu efficitur ante euismod a. Nam dictum in nulla non fringilla. Vivamus iaculis, risus vel imperdiet tincidunt, est lectus scelerisque orci, quis viverra est nisi dignissim justo. Donec commodo, odio a porta placerat, ipsum dui gravida augue, vel fermentum augue elit vel mi. Ut semper varius consectetur.</p>
-        <p id="white-paragraph">Praesent at elementum orci, ut fringilla sem. Mauris suscipit dui vel erat ullamcorper bibendum. Fusce hendrerit orci at ante consequat, at cursus nisl accumsan. Pellentesque eu tempor nisl. Nam leo purus, gravida quis elementum at, maximus iaculis libero. Curabitur blandit eleifend quam. Curabitur sollicitudin, turpis in scelerisque maximus, velit elit hendrerit sapien, quis eleifend purus ipsum et quam. Donec ac mi id purus rutrum venenatis. Quisque interdum magna quam, at faucibus dolor iaculis id. Vivamus eget tellus dolor. Sed id libero eget nulla suscipit tempus ac eu risus. Suspendisse sollicitudin finibus dapibus.</p>
-        <p id="white-paragraph">Vivamus accumsan dignissim sem vehicula pellentesque. Donec eget mi eros. Suspendisse quis pellentesque justo. Proin vitae porttitor nulla. Quisque ultricies est quis viverra sodales. Nulla commodo est eget dolor iaculis viverra. Vivamus euismod quam a ligula blandit, ut lacinia diam vestibulum.</p>
-        <p id="white-paragraph">Proin ornare varius est vel venenatis. Donec eleifend, justo sed aliquam maximus, purus neque bibendum nibh, et commodo risus felis non nisi. Proin ante urna, pellentesque feugiat mauris cursus, posuere sagittis nisl. Donec vitae cursus ex. Pellentesque rhoncus feugiat interdum. Vivamus aliquet consequat nibh at viverra. Nullam lacus sem, aliquet at condimentum vel, semper at velit. Donec non vestibulum risus. Nullam feugiat pellentesque varius. Ut euismod, mauris sed molestie elementum, turpis nibh molestie purus, at tempus urna mi non ante. Mauris sit amet suscipit ex, nec rhoncus lacus. Morbi sed venenatis ex, blandit sodales ligula.</p>
-        <p id="white-paragraph">Pellentesque eu massa et nisl auctor condimentum. Nullam consequat, neque sed sagittis facilisis, justo neque faucibus purus, luctus luctus ex eros vel eros. Vivamus suscipit efficitur quam, eu tincidunt justo tincidunt vitae. Fusce sit amet consectetur justo. Sed a convallis neque. Ut a ultrices ipsum. Phasellus nec lorem id leo viverra venenatis ac in nibh. Praesent vestibulum lorem id nunc iaculis volutpat. Duis id pellentesque mi. In pretium est sed enim egestas porttitor.</p>
-    </div>
-    <div id="footer">
-        <div id="footer-text">
-            <p>All content belongs to swagentertainment© 2015-forever <a href="https://github.com/itgsod-omer-akgun/Plankan">github</a> | Powered by swag</p>
-            <canvas id="myCanvas" width="50px" height="50px"></canvas>
-            <script>
-                ctx.font = "30px Arial";
-                ctx.strokeText("TZT",10,50);
-                ctx.fillstyle="#FFFFFF"
-            </script>
-        </div>
-    </div>
-</div>
 </body>
 </html>
