--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@
                 <script>
                     var canvas = document.getElementById("menu-canvas");
                     var ctx = canvas.getContext("2d");
-                    ctx.font = "30px Arial";
+                    ctx.font = "180% Arial";
                 ctx.fillText("Home",10,50);
                 </script>
             </a>
@@ -28,7 +28,7 @@
                 <script>
                     var canvas = document.getElementById("sök-sida-canvas");
                     var ctx = canvas.getContext("2d");
-                    ctx.font = "30px Arial";
+                    ctx.font = "180% Arial";
                     ctx.fillText("Bläddra",10,50);
                 </script>
             </a>
@@ -40,7 +40,7 @@
                 <script>
                     var canvas = document.getElementById("kontakt-canvas");
                     var ctx = canvas.getContext("2d");
-                    ctx.font = "30px Arial";
+                    ctx.font = "180% Arial";
                     ctx.fillText("Kontakta oss",10,50);
                 </script>
             </a>
@@ -52,9 +52,10 @@
                 <script>
                     var canvas = document.getElementById("my-page-canvas");
                     var ctx = canvas.getContext("2d");
-                    ctx.font = "30px Arial";
-                    ctx.fillText("mitt konto",10,50);
+                    ctx.font = "180% Arial";
+                    ctx.fillText("Mitt konto",10,50);
                 </script></a>
+
             <div id="tfheader">
                 <form id="tfnewsearch" method="get" action="">
                     <input type="text" class="tftextinput" name="q" size="31" maxlength="120"><input type="submit" value="search" class="tfbutton">
