--- a/site21/index.html
+++ b/site21/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="./js/bootstrap.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/jquery.js"></script>
-    <title>Plankan</title>
+    <title>Little Business</title>
 </head>
 <body>
 <div id="content">
