--- a/site21/toplist.html
+++ b/site21/toplist.html
@@ -71,8 +71,8 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <h4 class="media-heading">Test produkt</h4>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
 
@@ -84,7 +84,7 @@
             </div>
             <div class="media-body">
                 <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
             </div>
             <div class="media-body">
                 <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
     </div>
