--- a/site21/index.html
+++ b/site21/index.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Plankan</a>
+                <a class="navbar-brand" href="index.html">Little Business</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,12 +41,6 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="kontakta-oss.html">Kontakta oss</a></li>
                     <li class="dropdown">
