--- a/site21/toplist.html
+++ b/site21/toplist.html
@@ -83,7 +83,7 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
+                <h4 class="media-heading">Test produkt</h4>
                 <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
+                <h4 class="media-heading">Test produkt</h4>
                 <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
