--- a/site21/konst-musik.html
+++ b/site21/konst-musik.html
@@ -62,7 +62,6 @@
         </div><!-- /.container-fluid -->
     </nav>
     <!-- Menu ends-->
-
     <!-- Media starts-->
     <div id="media-content">
         <div class="media" id="media-object">
@@ -72,8 +71,8 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <h4 class="media-heading">Test produkt</h4>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
 
@@ -84,8 +83,8 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <h4 class="media-heading">Test produkt</h4>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
 
@@ -96,13 +95,12 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Test affär</h4>
-                <p>This is a test store and here will be information about the store</p>
+                <h4 class="media-heading">Test produkt</h4>
+                <p>Det här är en test produkt med information om produkten</p>
             </div>
         </div>
     </div>
     <!-- Media ends-->
-
 
 </div> <!-- end of content -->
 <script src="./js/jquery.js"></script>
