--- a/site21/index.html
+++ b/site21/index.html
@@ -82,8 +82,8 @@
         </div>
     </div>
     <div id="first-page-info">
-        <h1>Plankan</h1>
-        <p>Plankan är en sida där Man kan öppna sin affär och sälja sina produkter.</p>
+        <h1>Little Business</h1>
+        <p>Det här är en template som ni kan använda. Med den här templaten så kan ni configurera den till det ni vill.</p>
     </div>
 
 </div> <!-- end of content -->
