--- a/site21/kontakta-oss.html
+++ b/site21/kontakta-oss.html
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Plankan</a>
+                <a class="navbar-brand" href="index.html">Little Business</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,28 +35,11 @@
                         <ul class="dropdown-menu">
                             <li><a href="konst-musik.html">Konst och musik</a></li>
                             <li><a href="hantverk.html">Hantverk</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="sök-sida.html">Allt</a></li>
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="kontakta-oss.html">Kontakta oss</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profil<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Min sida</a></li>
-                            <li><a href="#">Min profil</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Logga ut</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
